ROS2_FreshmanProject/log/build_2023-07-03_19-59-21/ROS2_FreshmanProject/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/root/2ROS2workspace/ROS2_FreshmanProject/install/ROS2_FreshmanProject/lib/python3.10/site-packages/ROS2_FreshmanProject/Control.py", line 47
    a.data = [b'\x01\',b'\x01\']
                          ^
SyntaxError: unexpected character after line continuation character

